--- a/styles.css
+++ b/styles.css
@@ -46,3 +46,17 @@ table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
+
+/* --------------------------------------------------------------------- */
+
+.container {
+    display: flex;
+    flex-direction: column;
+}
+
+.logo-sect {
+    background-image: url("https://images.unsplash.com/photo-1585202900225-6d3ac20a6962?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80");
+
+    width: 687px;
+    height: 100vh;
+}
