--- a/styles.css
+++ b/styles.css
@@ -62,8 +62,9 @@ table {
 }
 
 .logo-text {
-    background-color: black;
+    background-color: rgba(0, 0, 0, 65%);
     height: 150px;
     position: relative;
     top: 200px;
+
 }
