--- a/styles.css
+++ b/styles.css
@@ -59,7 +59,7 @@ table {
 .logo-sect {
     background-image: url("https://images.unsplash.com/photo-1585202900225-6d3ac20a6962?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80");
 
-    width: 687px;
+    width: 35vw;
     height: 100vh;
 }
 
@@ -82,6 +82,7 @@ h1 {
     letter-spacing: 2px;
     font-weight: 700;
     font-family: 'Oswald', sans-serif;
+    text-align: center;
 }
 
 .logo-text img {
@@ -99,9 +100,19 @@ p {
     font-family: 'Oswald', sans-serif;
     font-weight: 400;
     letter-spacing: 1px;
-    padding: 50px;
+    padding: 0px 50px;
 }
 
 .bold {
     font-weight: 700;
 }
+
+.form-sect {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+
+    width: 65vw;
+}
+
+/* #231F1B for form background */
